--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-app-polyfill": "^1.0.2",
     "react-dev-utils": "^9.0.3",
     "react-dom": "^16.9.0",
+    "react-infinite-scroller": "^1.2.4",
     "react-router-dom": "^5.0.1",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
