--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
         "react-dev-utils": "^9.0.3",
         "react-dom": "^16.9.0",
         "react-infinite-scroller": "^1.2.4",
+        "react-redux": "^7.1.1",
         "react-router-dom": "^5.0.1",
+        "redux": "^4.0.4",
         "resolve": "1.12.0",
         "resolve-url-loader": "3.1.0",
         "sass-loader": "7.2.0",
