--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@typescript-eslint/eslint-plugin": "1.13.0",
         "@typescript-eslint/parser": "1.13.0",
         "antd": "^3.23.0",
+        "axios": "^0.19.0",
         "babel-eslint": "10.0.2",
         "babel-jest": "^24.8.0",
         "babel-loader": "8.0.6",
@@ -52,6 +53,7 @@
         "react-redux": "^7.1.1",
         "react-router-dom": "^5.0.1",
         "redux": "^4.0.4",
+        "redux-thunk": "^2.3.0",
         "resolve": "1.12.0",
         "resolve-url-loader": "3.1.0",
         "sass-loader": "7.2.0",
