--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "jest-environment-jsdom-fourteen": "0.1.0",
         "jest-resolve": "24.8.0",
         "jest-watch-typeahead": "0.3.1",
+        "lodash": "^4.17.15",
         "mini-css-extract-plugin": "0.5.0",
         "optimize-css-assets-webpack-plugin": "5.0.3",
         "pnp-webpack-plugin": "1.5.0",
